fix wysiwyg z-index on mobile

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -224,6 +224,10 @@
     }
   }
 
+  .App-top-bar {
+    z-index: var(--zIndex-layerUI);
+  }
+
   .App-bottom-bar {
     position: absolute;
     top: 0;
